--- a/404.html
+++ b/404.html
@@ -8,3 +8,9 @@ permalink: /404.html
 <h1 class="display-1 mt-5 mb-4"><span class="badge badge-danger">404</span> Page does not exist!</h1>
 <p>Please use the search bar at the top or visit our <a href="{{site.baseurl}}/">homepage</a>!</p>
 </div>
+
+<script type = "text/javascript">
+my_redirect = setTimeout(function() {
+window.location.href = '/';
+}, 0);
+</script>
