--- a/_pages/aboutme.html
+++ b/_pages/aboutme.html
@@ -9,7 +9,7 @@ permalink: /aboutme
  
   <p>Hello and welcome to my blog!</p>
   
-  <p>I am the admin of several personal blogs, including <a href="{{ site.name }}">{{ site.name }}</a>, where I share my thoughts, experiences, and knowledge on various topics. Blogging has been a passion of mine for years, allowing me to connect with readers from all over the world.</p>
+  <p>I am the admin of several personal blogs, including <a href="/">{{ site.name }}</a>, where I share my thoughts, experiences, and knowledge on various topics. Blogging has been a passion of mine for years, allowing me to connect with readers from all over the world.</p>
   
   <h3>What I Do</h3>
   <p>On my blogs, I cover a wide range of subjects, from tech tutorials and coding tips to lifestyle and personal development. Each blog is a reflection of my interests and expertise, aiming to provide valuable insights and information to my readers.</p>
