--- a/404.html
+++ b/404.html
@@ -1,16 +1,103 @@
 ---
 layout: default
-title: 404
+title: Download File
 permalink: /404.html
 ---
 
 <div class="text-center">
-<h1 class="display-1 mt-5 mb-4"><span class="badge badge-danger">404</span> Page does not exist!</h1>
-<p>Please use the search bar at the top or visit our <a href="{{site.baseurl}}/">homepage</a>!</p>
+<br /><br />
+<hr />
+<p><a href="{{site.baseurl}}/">Click Here To Download</a></p>
+<hr />
+
+
+
+<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
+<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
+<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts" />
+</div>
+<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
+<div style="display: none;" loading="lazy">
+<div class="jontor" loading="lazy">
+<script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
+<script src="https://www.fazri.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
+</div></div></div></div></span>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '7031189dba9f5fc8b62fcc4f4686ae74',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/7031189dba9f5fc8b62fcc4f4686ae74/invoke.js"></script>
+
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'bed6dc3f10b0c8755642b193c0b92f22',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/bed6dc3f10b0c8755642b193c0b92f22/invoke.js"></script>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'caa42a9cc3d6bb2d70cdd5e65ab9ce77',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/caa42a9cc3d6bb2d70cdd5e65ab9ce77/invoke.js"></script>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '04c92046d02db081b383b91a7056425f',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/04c92046d02db081b383b91a7056425f/invoke.js"></script>
+
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f4319a55c4ac85ebac8a19619bc316c4',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/f4319a55c4ac85ebac8a19619bc316c4/invoke.js"></script>
+
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '312dcd8c983e4060a24e6d0d4a1b58e8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/312dcd8c983e4060a24e6d0d4a1b58e8/invoke.js"></script>
+
+
+
+
 </div>
 
-<script type = "text/javascript">
-my_redirect = setTimeout(function() {
-window.location.href = '/';
-}, 0);
-</script>
