--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ permalink: /404.html
 <div style="display: none;" loading="lazy">
 <div class="jontor" loading="lazy">
 <script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
-<script src="https://www.fazri.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
+<script src="https://www.ioma.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
 </div></div></div></div></span>
 
 
