--- a/404.html
+++ b/404.html
@@ -1,101 +1,197 @@
 ---
 layout: default1
-title: Download File
+title: My Garden Is My Life
 permalink: /404.html
 ---
 
-<div class="text-center">
-<br /><br />
-<hr />
-<p><a href="{{site.baseurl}}/">Click Here To Download</a></p>
-<hr />
 
 
 
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
-<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
-<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = 'Hide'; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = 'new posts'; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="new posts" />
-</div>
-<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
-<div style="display: none;" loading="lazy">
-<div class="jontor" loading="lazy">
+
+
+
+<h2>   
+Rare or Unique Ornamental Plants
+</h2>
+
+
+<div class="col-12 mb-4">
+               <div class="row">
+          {% for post in site.categories.unique limit: 3 %}
+          <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+            <div class="card">
+           <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
+           </a>
+              <div class="card-body">
+                <h5 class="card-title" style="max-width:100%;">{{ post.title }}</h5>
+                <a href="{{ post.url }}" class="btn btn-primary">Read More
+                        </a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+
+
+
+
+
+
+
+<link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
+<script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script><center>
+<video id='4041' controls autoplay loop muted style="max-width:100%; height:auto;" >
+   <source src='https://video.twimg.com/ext_tw_video/1584254045212008448/pu/vid/360x360/cJxNNcSiyE_G7kUW.mp4' title='{{ page.title }}' type='video/mp4' />
+</video></center>
+<script type="application/javascript">
+    var testVideo = fluidPlayer(
+        "4041",
+{
+	"layoutControls": {
+		"controlBar": {
+			"autoHideTimeout": 1,
+			"animated": true,
+			"autoHide": true
+		},
+		"htmlOnPauseBlock": {
+			"html": null,
+			"height": null,
+			"width": null
+		},
+		"autoplay": true,
+		"mute": true,
+		"allowTheatre": true,
+		"playPauseAnimation": true,
+		"playbackRateEnabled": true,
+		"allowDownload": true,
+		"playButtonShowing": true,
+		"fillToContainer": true,
+		"posterImage": "{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}"
+	},
+	"vastOptions": {
+	"adList": [
+                    {
+                        "roll": "preRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ada2ce975f0d25fb2eb0be99b4e7d14a"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": "1"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=b320bff569bb5535540366abcef11a09",
+                        "timer": "2"
+                    },
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=f76eb4092d4b94ed2411172982571a87",
+                        "timer": "3"
+                    },
+		{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": "4"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": "5"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 6
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 7
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 8
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 9
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 10
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 11
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 12
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=0265840d4e6bd543c018981a01edca89",
+                        "timer": 13
+                    },
+            ]
+        }
+}
+    );
+</script>
+
+<h2>Edible Ornamental Plants</h2>
+<div class="col-12 mb-4">
+               <div class="row">
+          {% for post in site.categories.edible limit: 3 %}
+          <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+            <div class="card">
+           <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
+           </a>
+              <div class="card-body">
+                <h5 class="card-title" style="max-width:100%;">{{ post.title }}</h5>
+                <a href="{{ post.url }}" class="btn btn-primary">Read More
+                        </a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+
+<h2>
+Fragrant Ornamental Plants
+</h2>
+<div class="col-12 mb-4">
+               <div class="row">
+          {% for post in site.categories.fragrant limit: 3 %}
+          <div class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+            <div class="card">
+           <a href="{{ post.url }}">   <img src="{{ post.image }}" class="card-img-top" alt="{{ post.title }}">
+           </a>
+              <div class="card-body">
+                <h5 class="card-title" style="max-width:100%;">{{ post.title }}</h5>
+                <a href="{{ post.url }}" class="btn btn-primary">Read More
+                        </a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+
+
+<div class="jontor" loading="lazy" style="width:100%; height:5px; overflow:auto;">
+<br /><br /><br /><br />
 <script src="https://rawgit.com/rezamuhamad/rakinfo/master/sitemap.js"></script>
-<script src="https://www.ioma.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script>
-</div></div></div></div></span>
+<script src="https://www.ioma.my.id/feeds/posts/default/?start-index=1&max-results=6666&amp;alt=json-in-script&amp;callback=rak_info_Load"></script></div>
 
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '7031189dba9f5fc8b62fcc4f4686ae74',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/7031189dba9f5fc8b62fcc4f4686ae74/invoke.js"></script>
-
-
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'bed6dc3f10b0c8755642b193c0b92f22',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/bed6dc3f10b0c8755642b193c0b92f22/invoke.js"></script>
-
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'caa42a9cc3d6bb2d70cdd5e65ab9ce77',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/caa42a9cc3d6bb2d70cdd5e65ab9ce77/invoke.js"></script>
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '04c92046d02db081b383b91a7056425f',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/04c92046d02db081b383b91a7056425f/invoke.js"></script>
-
-
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'f4319a55c4ac85ebac8a19619bc316c4',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/f4319a55c4ac85ebac8a19619bc316c4/invoke.js"></script>
-
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '312dcd8c983e4060a24e6d0d4a1b58e8',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//evendisciplineseedlings.com/312dcd8c983e4060a24e6d0d4a1b58e8/invoke.js"></script>
-
-</div>
+  
 
 
